# asym-bin-merger

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
run_examples/: histogram_merger.py  histogram_merger_test.py  quarter_radial_test_hist.root  radial_test_hist.root  random_test_hist.root
src/asym_bin_merger/: __init__.py
tests/: test_bin_merger.py  test_check_superbins.py  test_convert_hist.py  test_get_merged_hist.py  test_get_neighbor_bins.py  test_superbin.py
